<resources>
    <string name="app_name">TextEdition</string>
    <string name="action_clear">Очистить</string>
    <string name="action_open">Открыть</string>
    <string name="action_save">Сохранить</string>
    <string name="action_settings">Настройки</string>


    <string name="pref_openmode">Режим открытия</string>
    <string name="pref_color">Цвет</string>
    <string name="pref_color_black">Цвет</string>
    <string name="pref_color_red">Красный</string>
    <string name="pref_color_green">Зеленый</string>
    <string name="pref_color_blue">Синий</string>


    <string name="pref_size">Размер</string>
    <string name="pref_style">Стиль</string>
    <string name="pref_style_regular">Нормальный</string>
    <string name="pref_style_bold">Полужирный</string>
    <string name="pref_style_italic">Курсив</string>
    <string name="title_activity_settings">SettingsActivity</string>


</resources>
