<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="Работа со шрифтами">
        <CheckBoxPreference
            android:enabled="false"
            android:key="Режим открытия"
            android:summary="Открыть файл при запуске приложения"
            android:title="Открыть" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Настройка шрифтов">
        <EditTextPreference
            android:defaultValue="14"
            android:dialogTitle="Введите размер шрифта от 10 до 30"
            android:key="Размер"
            android:summary="Устанавливает новый размер шрифта"
            android:title="Размер шрифта" />
        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="Выберите стиль для шрифта"
            android:entries="@array/text_style"
            android:entryValues="@array/text_style"
            android:key="@string/pref_style"
            android:summary="Устанавливает стиль для шрифта"
            android:title="Стиль для шрифта" />
        <PreferenceScreen
            android:key="@string/pref_color"
            android:summary="Устанавоиваем цвет для текста"
            android:title="Цвет текста">
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="@string/pref_color_black"
                android:summary="Устанавливаем черный цвет"
                android:title="Черный" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="@string/pref_color_red"
                android:summary="Устанавливаем красный цвет"
                android:title="Красный" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="@string/pref_color_green"
                android:summary="Устанавливаем зеленый цвет"
                android:title="Зеленый" />
            <CheckBoxPreference
                android:defaultValue="true"
                android:key="@string/pref_color_blue"
                android:summary="Устанавливаем синий цвет"
                android:title="Синий" />


        </PreferenceScreen>
    </PreferenceCategory>
</PreferenceScreen>